<resources>
    <string name="app_name">Draw.fi</string>
    <string name="facebook_app_id">203419760094933</string>
    <string name="fb_login_protocol_scheme">fb203419760094933</string>



    <!-- 13 COLORS + ERASER -->
    <string name="redStr">RED</string>
    <string name="orangeStr">ORANGE</string>
    <string name="yellowStr">YELLOW</string>
    <string name="greenStr">GREEN</string>
    <string name="cyanStr">CYAN</string>
    <string name="magentaStr">MAGENTA</string>
    <string name="blueStr">BLUE</string>

    <string name="eraserStr">ERASER</string>
    <string name="blackStr">BLACK</string>
    <string name="grayStr">GRAY</string>
    <string name="darkGreenStr">DARK GREEN</string>
    <string name="brownStr">BROWN</string>
    <string name="purpleStr">PURPLE</string>
    <string name="pinkStr">PINK</string>


    <string name="yourScoreLabelStr">YOUR SCORE:</string>
    <string name="yourScoreStr">201</string>
    <string name="opponentScoreLabelStr">OPPONENT SCORE</string>
    <string name="opponentScoreStr">101</string>
    <string name="youWonStr">YOU WON!</string>
    <string name="youLostStr">YOU LOST</string>
    <string name="yourStashLabelStr">YOUR CURRENT STASH:</string>
    <string name="yourStashStr">9786976</string>
    <string name="gameOverStr">GAME OVER!</string>


</resources>
