<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_ERASER"
        android:title="@string/eraserStr"
        app:showAsAction="always"
        android:icon="@drawable/eraser_512" />
    <item
        android:id="@+id/menu_BLACK"
        android:title="@string/blackStr"
        app:showAsAction="always"
        android:icon="@drawable/circle_icon" />
    <item
        android:id="@+id/menu_BROWN"
        android:title="@string/brownStr"
        android:icon="@drawable/circle_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_DARKGREEN"
        android:title="@string/purpleStr"
        app:showAsAction="always"
        android:icon="@drawable/circle_icon" />
    <item
        android:id="@+id/menu_PURPLE"
        android:title="@string/purpleStr"
        app:showAsAction="always"
        android:icon="@drawable/circle_icon" />
    <item
        android:id="@+id/menu_MAGENTA"
        android:title="@string/magentaStr"
        app:showAsAction="always"
        android:icon="@drawable/circle_icon" />


</menu>