<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/gameOverLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameOverStr"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"/>

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/youWonStr"
        android:layout_below="@+id/gameOverLabel"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:paddingTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp"
        android:id="@+id/scoreLayout"
        android:layout_below="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:background="#97cfed">

        <TextView
            android:id="@+id/yourScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/yourScoreLabelStr"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/yourScore"
            android:layout_below="@id/yourScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/yourScoreStr"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/opponentScoreLabel"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/opponentScoreLabelStr"
            android:layout_below="@+id/yourScore"
            />

        <TextView
            android:id="@+id/opponentScore"
            android:layout_below="@+id/opponentScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/opponentScoreStr"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

    <TextView
        android:id="@+id/currentStashLabel"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/yourStashLabelStr"
        android:layout_below="@+id/scoreLayout"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/currentStash"
        android:layout_below="@+id/currentStashLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/yourStashStr"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_below="@+id/currentStash"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/small_dragon"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>